Cadastro de um novo autor após correções.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#POSTGRES
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev-eficiente?createDatabaseIfNotExist=true
+spring.datasource.username=demo_mvc
+spring.datasource.password=demomvc
 
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
