Atualizando os itens do carrinho.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #POSTGRES
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev-eficiente?createDatabaseIfNotExist=true
-spring.datasource.username=demo_mvc
-spring.datasource.password=demomvc
+spring.datasource.url=jdbc:postgresql://localhost:5432/casa-do-codigo?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 #JPA
 spring.jpa.hibernate.ddl-auto=update
